--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
       }
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Breynersmith/FindX.git"
+  },
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
